--- a/WrapperNetPOI/WrapperNetPOI.csproj
+++ b/WrapperNetPOI/WrapperNetPOI.csproj
@@ -20,7 +20,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <LangVersion>latestMajor</LangVersion>
     <AssemblyName>WrapperNetPOI</AssemblyName>
-    <Copyright>©sashamsuper, 2020–2022</Copyright>
+    <Copyright>©sashamsuper, 2020-2022</Copyright>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
     <WarningLevel>5</WarningLevel>
