Create launch and task for VScode. Remove Program.cs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/WrapperNPOI/bin/Debug/net5.0/WrapperNetPOI.dll",
+            "program": "${workspaceFolder}\\testWrapper\\MsTestWrapper\\bin\\Debug\\net6.0\\MsTestWrapper.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/WrapperNPOI",
+            "cwd": "${workspaceFolder}\\testWrapper\\MsTestWrapper",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
