--- a/testWrapper/MsTestWrapper/MsTestWrapper.csproj
+++ b/testWrapper/MsTestWrapper/MsTestWrapper.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="srcTest\500000_Records_Data.xlsx" />
+    <None Remove="srcTest\listView.xlsx" />
+    <None Remove="srcTest\listView2.xls" />
+    <None Remove="srcTest\listViewXLSX.xlsx" />
+    <None Remove="srcTest\listViewXLSX2.xlsx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
@@ -17,6 +25,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\WrapperNetPOI\WrapperNetPOI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="srcTest\" />
   </ItemGroup>
 
 </Project>
