--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}\\Test\\RunConsole\\bin\\Debug\\net6.0\\RunConsole.dll",
+            "program": "${workspaceFolder}\\\\Test\\UnitTest\\bin\\Debug\\net6.0\\UnitTest.dll",
             "args": [],
-            "cwd": "${workspaceFolder}\\Test\\RunConsole",
+            "cwd": "${workspaceFolder}\\\\Test\\UnitTest",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
