--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,17 @@
                 "${workspaceFolder}\\Test\\UnitTest\\UnitTest.csproj"
             ],
             "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "test",
+            "command": "dotnet",
+            "type": "process",
+            "isTestCommand": true,
+            "args": [
+                "test",
+                "${workspaceFolder}\\Test\\UnitTest\\UnitTest.csproj"
+            ],
+            "problemMatcher": "$msCompile"
         }
     ]
 }
