Data Frame Work

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -47,6 +47,15 @@
                 "${workspaceFolder}\\Test\\UnitTest\\UnitTest.csproj"
             ],
             "problemMatcher": "$msCompile"
+        },
+        
+        {
+            "label": "run test",
+            "dependsOn":["build","test"],
+            "problemMatcher": "$msCompile"
         }
+
+
+
     ]
 }
