--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,10 @@ jobs:
       run: dotnet build ./WrapperNetPOI/WrapperNetPOI.csproj --no-restore
     - name: Test
       run: dotnet test ./WrapperNetPOI/WrapperNetPOI.csproj --no-build --verbosity normal
+    - name: Publish  
+       uses:brandedoutcast/publish-nuget@v2.5.2  
+       with:PROJECT_FILE_PATH:./WrapperNetPOI/WrapperNetPOI.csproj
+       NUGET_KEY:oy2ihwtgho5d4lxl5k2q2wh42dyqan3e7duf7fpp7epxfe
+
+
       
