--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,7 @@ jobs:
       uses: brandedoutcast/publish-nuget@v2.5.2  
       with:
         PROJECT_FILE_PATH: ./WrapperNetPOI/WrapperNetPOI.csproj  
-        NUGET_KEY: ${{secrets.KEYNUGET}} 
+        NUGET_KEY: ${{secrets.NUGET_KEY_REPR}} 
 
 
       
