--- a/WrapperNetPOI/WrapperNetPOI.csproj
+++ b/WrapperNetPOI/WrapperNetPOI.csproj
@@ -29,7 +29,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Microsoft.Data.Analysis" Version="0.21.0-preview.23511.1" />
+    <PackageReference Include="Microsoft.Data.Analysis" Version="0.21.0" />
     <!--<PackageReference Include="Microsoft.Data.Analysis" Version="0.20.1" />-->
     <PackageReference Include="npoi" Version="2.6.0" />
     <PackageReference Include="Serilog" Version="3.1.1" />
