--- a/WrapperNetPOI/WrapperNetPOI.csproj
+++ b/WrapperNetPOI/WrapperNetPOI.csproj
@@ -22,7 +22,7 @@
     <AssemblyName>WrapperNetPOI</AssemblyName>
     <Copyright>©sashamsuper, 2020-2023</Copyright>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>0.1.16-alpha</Version>
+    <Version>0.1.17-alpha</Version>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
@@ -35,12 +35,12 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Data.Analysis" Version="0.21.1" />
     <!--<PackageReference Include="Microsoft.Data.Analysis" Version="0.20.1" />-->
-    <PackageReference Include="npoi" Version="2.6.0" />
+    <PackageReference Include="NPOI" Version="2.6.2" />
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="system.text.json" Version="8.0.5" />
-    <PackageReference Include="ScratchPad.NPOI.HWPF" Version="2.5.7" />
+    <!-- <PackageReference Include="ScratchPad.NPOI.HWPF" Version="2.5.7" />-->
     <!-- <PackageReference Include="NPOI.HWPFCore" Version="2.3.0.1"/>-->
   </ItemGroup>
   <PropertyGroup>
@@ -82,9 +82,7 @@
       <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-    <PackageReference Include="Mapster">
-      <Version>7.4.1-pre01</Version>
-    </PackageReference>
+  <ItemGroup>
+    <ProjectReference Include="..\..\NPOI_WORD\scratchpad\HWPF\HWPF.csproj" />
   </ItemGroup>
 </Project>
