--- a/WrapperNetPOI/WrapperNetPOI.csproj
+++ b/WrapperNetPOI/WrapperNetPOI.csproj
@@ -22,7 +22,7 @@
     <AssemblyName>WrapperNetPOI</AssemblyName>
     <Copyright>©sashamsuper, 2020-2023</Copyright>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>0.1.17-alpha</Version>
+    <Version>0.1.18-alpha</Version>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
@@ -89,5 +89,9 @@
     <Reference Include="NPOI.ScratchPad.HWPF">
       <HintPath>NPOI.ScratchPad.HWPF.dll</HintPath>
     </Reference>
+    <Content Include="NPOI.ScratchPad.HWPF.dll">
+      <Pack>true</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
